Bug 47947 - UI: Calc Data Form button width doesn't accommodate German text or German text too long.
Summary: UI: Calc Data Form button width doesn't accommodate German text or German tex...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
3.5.1 release
Hardware: Other All
: low normal
Assignee: Andras Timar
URL:
Whiteboard: target:3.7.0 target:3.5.6 target:3.6.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-27 08:52 UTC by Michael H.
Modified: 2012-07-15 21:16 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Narrow buttons not accomodating German text length. (39.80 KB, image/jpeg)
2012-03-27 08:52 UTC, Michael H.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael H. 2012-03-27 08:52:03 UTC
Created attachment 59113 [details]
Narrow buttons not accomodating German text length.

The "Next Record" and "Previous Record" buttons in Calc's Data Form aren't wide enough to accommodate the corresponding German text "Nächster Datensatz" und "Vorhergehender Datensatz" (s. attachment). 

The "simple" solution would be to simply drop the redundant "Datensatz" and use "Nächster" (Next) and "Vorheriger" (Previous); otherwise button enlargement would be necessary.

My current system settings (which would necessarily affect this):
LibreOffice UI: Scale 100%
OS (WinXP Pro SP3):
- Screenresolution: 1280 x 800, 96 DPI (no enlargement)
- Font type/size/weight for dialogs: MS Sans Serif, 10 pt, normal
Comment 1 Not Assigned 2012-07-15 19:22:03 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c61e3c941d46fe1ae6066f31e01786100e39da56

fdo#47947 Data Form dialog layout fix
Comment 2 Not Assigned 2012-07-15 21:16:15 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=12b3bdea08062fb4ad8b11d63a117c50d60f5b93&g=libreoffice-3-5

fdo#47947 Data Form dialog layout fix


It will be available in LibreOffice 3.5.6.
Comment 3 Not Assigned 2012-07-15 21:16:39 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e535c1f6d4d14c27b8d963758184b2fd025d10a9&g=libreoffice-3-6

fdo#47947 Data Form dialog layout fix


It will be available in LibreOffice 3.6.