fdo#47947 Data Form dialog layout fix

Change-Id: Ifa1689ff9be7afa14f5694825c506f7c8c3eff43
(cherry picked from commit c61e3c941d46fe1ae6066f31e01786100e39da56)

Signed-off-by: Caolán McNamara <caolanm@redhat.com>